<resources>
    <string name="app_name">Calls</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="calls">Calls</string>
    <string name="no_calls">There no calls</string>
    <string name="easy_calls_for_everyone">Easy calls for everyone</string>
    <string name="your_recent_calls">Your recent calls</string>
    <string name="content_description_media" />
    <string name="title">Title</string>
    <string name="secondary_text">Secondary text</string>
    <string name="supporting_text">text</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="there_are_no_contacts">There are no contacts</string>
    <string name="call">Call</string>
    <string name="view_the_contact">View the contact</string>
    <string name="contacts">Contacts</string>
    <string name="add_a_contact">Add a contact</string>
    <string name="your_contacts">Your contacts</string>
    <string name="add_a_new_contact">Add a new contact</string>
    <string name="view_a_contact">View a contact</string>
    <string name="submit">Submit</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone number</string>
    <string name="search">Search</string>
    <string name="contact">Contact</string>
    <string name="write_a_message">A new message</string>
    <string name="no_contacts_text">Add a new contact in our app. It is very fast</string>
    <string name="no_call_text">Call someone. It is very fast and easy.</string>
    <string name="find_some_one">View contacts</string>
    <string name="delete">Delete</string>
    <string name="a_new_message">A new message</string>
    <string name="the_text_of_sms">The text of sms</string>
    <string name="send">Send</string>
    <string name="title_activity_search">SearchActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="no_space">0dp</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="app_label" />
    <string name="search_hint">Search</string>
</resources>