<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:id="@+id/nav_home"
        android:checkableBehavior="single">
        <item
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
    </group>

    <group
        android:id="@+id/nav_contacts"
        android:checkableBehavior="single">
        <item
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/contacts" />
    </group>

    <group
        android:id="@+id/nav_add_contact"
        android:checkableBehavior="single">
        <item
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/add_a_contact" />
    </group>
</menu>