<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/space"
    android:orientation="vertical">

    <TextView
        android:paddingTop="@dimen/space"
        android:text="@string/contact"
        android:layout_marginBottom="@dimen/space_half"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:gravity="center_horizontal"
        style="@style/TextAppearance.MaterialComponents.Headline4"
        />

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/space_half"
        android:layout_marginTop="@dimen/space_half"
        app:cardBackgroundColor="@color/orange"
        app:cardElevation="@dimen/card_elevation"
        app:strokeWidth="1dp"
        app:cardCornerRadius="@dimen/card_radius"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            android:padding="@dimen/space_half"
            >
            <Button
                android:id="@+id/call_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/call"
                android:layout_marginRight="@dimen/space_half"
                android:layout_marginEnd="@dimen/space_half" />

            <Button
                android:id="@+id/write_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/write_a_message"
                android:layout_marginRight="@dimen/space_half"
                />

            <Button
                android:id="@+id/delete_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/delete"
                />
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/space_half"
        android:layout_marginTop="@dimen/space"
        app:cardElevation="@dimen/card_elevation"
        app:strokeWidth="1dp"
        app:cardCornerRadius="@dimen/card_radius"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/space"
            android:orientation="vertical"
            >
            <TextView
                android:paddingTop="@dimen/space"
                android:text="@string/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                style="@style/TextAppearance.MaterialComponents.Headline6"
               />

            <TextView
                android:id="@+id/contact_name"
                android:paddingTop="@dimen/space"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:text="@string/submit"
                style="@style/TextAppearance.MaterialComponents.Subtitle1"
                android:layout_marginBottom="@dimen/space"
                />

            <View
                android:id="@+id/line"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/gray"
                android:layout_marginTop="@dimen/space_half"
                android:layout_marginBottom="@dimen/space_half"
                />

            <TextView
                android:paddingTop="@dimen/space"
                android:text="@string/phone_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                style="@style/TextAppearance.MaterialComponents.Headline6"
                />

            <TextView
                android:id="@+id/contact_phone"
                android:paddingTop="@dimen/space"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                style="@style/TextAppearance.MaterialComponents.Subtitle1"
                />
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>
</LinearLayout>

