<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/space"
    android:background="@color/white"
    android:orientation="vertical"
    android:layout_gravity="center_horizontal"
    tools:context=".ui.home.HomeFragment">

    <TextView
        android:paddingTop="@dimen/space"
        android:text="@string/a_new_message"
        android:id="@+id/text_home"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:gravity="center_horizontal"
        style="@style/TextAppearance.MaterialComponents.Headline4"
        />

    <com.google.android.material.textfield.TextInputLayout
        app:endIconMode="clear_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/space"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:hint="@string/phone_number">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:id="@+id/phoneNumber"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        app:endIconMode="clear_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/space"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:hint="@string/the_text_of_sms"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/messageTxt"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/sms_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/send"
        android:layout_marginTop="@dimen/space"
        />
</LinearLayout>